--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "commander": "^7.0.0",
     "download-git-repo": "^3.0.2",
     "fs-extra": "^9.0.1",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "prettier": "^2.2.1"
   },
   "files": [
     "dist/*",
     "index.js"
   ],
   "devDependencies": {
-    "@types/fs-extra": "^9.0.6"
+    "@types/fs-extra": "^9.0.6",
+    "@types/inquirer": "^7.3.1",
+    "@types/prettier": "^2.1.6"
   },
   "scripts": {
     "build": "tsc src/index.ts --outDir dist/ --declaration"
